--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,31 +1,68 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+<html lang="en">
+<head>
+	
+ <!-- Basic Page Needs -->
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <title>{{ page.title }}</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+ <!-- Mobile Specific Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
 
-    </head>
-    <body>
-        <div class="wrapper">
-          <header>
-			<img src="2012-09-22_22-18-11_315.jpg" width="100px">
-            <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-            <a class="extra" href="/">home</a>
-          </header>
+ <!-- FONT -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-		  <section class="content">
-            {{ content }}
-		  </section>
-		
-        </div>
+ <!-- syntax highlighting CSS -->
+  <link rel="stylesheet" href="/css/syntax.css">
 
-    </body>
+ <!-- Custom CSS -->
+  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/skeleton.css">
+  <link rel="stylesheet" href="/css/custom.css">
+
+
+ <!-- Favicon -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
+  
+</head>
+
+<body>
+ <!-- Primary Page Layout -->
+  <div class="container">
+	<div class="row">
+	  <div class="one-third column" style="margin-top: 15%">
+		  <div class="avatar">
+			<div class="avatar-inner">
+				<img src="images/avatar_2.jpg" >
+			</div>
+		  </div>
+		<br><br><br><br><br>
+		  <h1><strong>{{ site.name }}</strong></h1>
+		  <p class="projects"><a href="http://dailydocket.org">dailydocket</a><br>
+		  <a href="http://ruleperfect.com""">ruleperfect</a><br>
+		  <a href="/about">About me</a><br>
+		  <a href="https://www.linkedin.com/in/pjfamig">LinkedIn</a>, <a href="https://github.com/pjfamig">GitHub</a>, <a href="http://twitter.com/famiglietti">Twitter</a></p>
+
+		  <p>
+			<strong><h6>About me</h6></strong>
+			I'm an IP attorney, entrepreneur, and cyclist. 
+		  </p>
+	  </div>
+	
+	  <div class="two-thirds column" style="margin-top: 15%">
+		<section class="content">
+           {{ content }}
+		</section>
+	  </div>	
+	</div>
+  </div>
+</body>
+
 </html>
+
+
